--- a/src/pages/bmi/bmi.scss
+++ b/src/pages/bmi/bmi.scss
@@ -1,14 +1,5 @@
 page-bmi {
-    video {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        min-width: 100%;
-        min-height: 100%;
-        width: auto;
-        height: auto;
-        z-index: -100;
-        transform: translateX(-50%) translateY(-50%);
+    .Screen{
+        color: #ff1e56;
     }
-
 }
