--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,6 +33,7 @@ $app-direction: ltr;
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
 
+
 $colors: (
   primary:    #bfff48,
   secondary:  #32db64,
@@ -40,7 +41,7 @@ $colors: (
   light:      #f4f4f4,
   dark:       #222
 );
-$card-md-background-color:#FFFFFF;
+$card-md-background-color:#323232;
 
 // App iOS Variables
 // --------------------------------------------------
